# nucleo_delta_robot

./: .gitignore  CMakeLists.txt  TESTING_GUIDE.md  nucleo_h753zi.overlay  prj.conf
docs/: hardware-configuration.yaml  packet-protocol-specification.yaml
include/: config.h
src/: crc16.c  crc16.h  imu.c  imu.h  madgwick.h  main.c  network.c  network.h  packet.c  packet.h  tmc9660.c  tmc9660.h
tools/: DEMO.md  README.md  imu_visualizer_3d.py  mock_imu_server.py  requirements.txt  test_phase2_network.py  test_phase3_packets.py
